--- a/UITabelView練習/Base.lproj/Main.storyboard
+++ b/UITabelView練習/Base.lproj/Main.storyboard
@@ -1,24 +1,191 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5QD-QK-jdE">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--電話簿-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UITabelView練習" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6sg-Se-hH1">
+                                <rect key="frame" x="0.0" y="44" width="390" height="665"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myTableCell" rowHeight="60" id="YoP-eE-zuG" customClass="MyTableViewCell" customModule="UITabelView練習" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YoP-eE-zuG" id="a10-5S-2r3">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="xBM-Y1-ezm">
+                                                    <rect key="frame" x="20" y="10" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="4Lv-st-d2I"/>
+                                                        <constraint firstAttribute="width" constant="40" id="KRW-6r-VvF"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaT-4O-0IR">
+                                                    <rect key="frame" x="76" y="11" width="88" height="39"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDk-d5-Fb8">
+                                                    <rect key="frame" x="172" y="11" width="222" height="39"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xBM-Y1-ezm" firstAttribute="top" secondItem="a10-5S-2r3" secondAttribute="top" constant="10" id="2Jl-Fc-p2s"/>
+                                                <constraint firstAttribute="bottom" secondItem="xBM-Y1-ezm" secondAttribute="bottom" constant="10" id="agy-X2-TIm"/>
+                                                <constraint firstItem="xBM-Y1-ezm" firstAttribute="leading" secondItem="a10-5S-2r3" secondAttribute="leading" constant="20" id="kx6-j8-JDF"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="headerImg" destination="xBM-Y1-ezm" id="6Hi-3d-dVf"/>
+                                            <outlet property="name" destination="WaT-4O-0IR" id="hvV-DK-i0Q"/>
+                                            <outlet property="phone" destination="YDk-d5-Fb8" id="8w8-ta-xa7"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="AOY-oh-Cha">
+                                <rect key="frame" x="0.0" y="717" width="390" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="自動排序"/>
+                                <connections>
+                                    <action selector="sort:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vqZ-zd-TJy"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6sg-Se-hH1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Mc2-rs-N71"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6sg-Se-hH1" secondAttribute="trailing" id="N0u-pf-4zw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6sg-Se-hH1" secondAttribute="bottom" id="TfP-f5-yWl"/>
+                            <constraint firstItem="6sg-Se-hH1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="su5-oo-LYS"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="電話簿" image="folder" catalog="system" selectedImage="folder" id="fKC-2N-5Lj"/>
+                    <connections>
+                        <outlet property="theTabelView" destination="6sg-Se-hH1" id="Hqa-8U-mq5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="927.69230769230762" y="81.042654028436019"/>
+        </scene>
+        <!--輸入電話-->
+        <scene sceneID="On8-xp-dbe">
+            <objects>
+                <viewController id="UPx-6H-7Hk" customClass="InputViewController" customModule="UITabelView練習" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="svB-hC-NBw">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入聯絡人電話" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iyo-eQ-MiE">
+                                <rect key="frame" x="70" y="174" width="250" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D4c-OG-lpv">
+                                <rect key="frame" x="220" y="244" width="100" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="BFW-69-WSP"/>
+                                    <constraint firstAttribute="height" constant="50" id="ggv-rj-XyG"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="輸入">
+                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                                </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="inputClicked:" destination="UPx-6H-7Hk" eventType="touchUpInside" id="OJf-Em-soE"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="輸入聯絡人姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wPW-eu-u7W">
+                                <rect key="frame" x="70" y="104" width="250" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="UKq-bQ-pKh"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <constraints>
+                            <constraint firstItem="wPW-eu-u7W" firstAttribute="leading" secondItem="UKq-bQ-pKh" secondAttribute="leading" constant="70" id="1h3-h4-D2b"/>
+                            <constraint firstItem="UKq-bQ-pKh" firstAttribute="trailing" secondItem="D4c-OG-lpv" secondAttribute="trailing" constant="70" id="BVj-Fk-GUZ"/>
+                            <constraint firstItem="Iyo-eQ-MiE" firstAttribute="top" secondItem="wPW-eu-u7W" secondAttribute="bottom" constant="30" id="Cba-7s-HYU"/>
+                            <constraint firstItem="wPW-eu-u7W" firstAttribute="top" secondItem="UKq-bQ-pKh" secondAttribute="top" constant="60" id="Ddy-YA-z1m"/>
+                            <constraint firstItem="Iyo-eQ-MiE" firstAttribute="leading" secondItem="UKq-bQ-pKh" secondAttribute="leading" constant="70" id="P8f-Eq-AR1"/>
+                            <constraint firstItem="UKq-bQ-pKh" firstAttribute="trailing" secondItem="wPW-eu-u7W" secondAttribute="trailing" constant="70" id="RnT-QC-vkm"/>
+                            <constraint firstItem="UKq-bQ-pKh" firstAttribute="trailing" secondItem="Iyo-eQ-MiE" secondAttribute="trailing" constant="70" id="sSS-9Z-yQS"/>
+                            <constraint firstItem="D4c-OG-lpv" firstAttribute="top" secondItem="Iyo-eQ-MiE" secondAttribute="bottom" constant="30" id="xVN-WZ-hoV"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="輸入電話" image="pencil" catalog="system" selectedImage="pencil" id="KSS-bV-upD"/>
+                    <connections>
+                        <outlet property="nameTF" destination="wPW-eu-u7W" id="4F8-am-Y3W"/>
+                        <outlet property="phoneTF" destination="Iyo-eQ-MiE" id="XEk-LA-3AC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XdN-Oh-SNf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="928.98550724637687" y="806.91964285714278"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="7Ht-gG-t1j">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5QD-QK-jdE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KID-hl-li4">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="UPx-6H-7Hk" kind="relationship" relationship="viewControllers" id="1c6-9V-z46"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="6Dj-b9-AGi"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mze-Wp-S8J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-80" y="82"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dog" width="512" height="512"/>
+        <image name="folder" catalog="system" width="128" height="97"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
